# board_games

./: .gitignore  CMakeLists.txt
Server/: Server.sln
Server/Server/: Server.cs
Server/ServerLib/: ClientObject.cs  Game.cs  Server.cs
fool/: CMakeLists.txt  fool.cpp  icon.rc
fool/headers/: AI.h  Animation.h  Application.h  Button.h  CardDeck.h  CardField.h  CardGroup.h  CardPile.h  Component.h  CreatingRoomState.h  GameEndState.h  GameState.h  GameStatus.h  InputText.h  Label.h  ListItem.h  MenuState.h  MultiplayerConnectionState.h  Offset.h  OnlineGameItem.h  PauseState.h  PlayerIdentifiers.h  ResourceHolder.h  ResourceHolder.inl  ResourceIdentifiers.h  SceneNode.h  ServerService.h  ShapeNode.h  SpriteNode.h  State.h  StateIdentifiers.h  StateStack.h  StatisticState.h  Utility.h  card.h
fool/headers/Engine/: Application.h  SceneNode.h  ShapeNode.h  SpriteNode.h  State.h  StateStack.h
fool/headers/Engine/Resource/: ResourceHolder.hpp  ResourceIdentifiers.h
fool/headers/GUI/: Button.h  Component.h  Container.h  InputText.h  Label.h  List.h  ListItem.h  OnlineGameItem.h
fool/headers/Game/: AI.h  Animation.h  CardDeck.h  CardField.h  CardGroup.h  CardPile.h  GameDescription.h  GameInfo.h  GameStatus.h  PlayerInfo.h  card.h
fool/headers/States/: ConnectionWaitState.h  CreatingRoomState.h  GameEndState.h  GameState.h  MenuState.h  MultiplayerConnectionState.h  MultiplayerGameState.h  PauseState.h  SettingsState.h  StateIdentifiers.h  StatisticState.h
fool/sources/: AI.cpp  Animation.cpp  Application.cpp  Button.cpp  CardDeck.cpp  CardField.cpp  CardGroup.cpp  CardPile.cpp  Component.cpp  Container.cpp  CreatingRoomState.cpp  GameEndState.cpp  GameState.cpp  GameStatus.cpp  InputText.cpp  Label.cpp  List.cpp  ListItem.cpp  MenuState.cpp  MultiplayerConnectionState.cpp  Offset.cpp  OnlineGameItem.cpp  PauseState.cpp  SceneNode.cpp  ServerService.cpp  ShapeNode.cpp  SpriteNode.cpp  State.cpp  StateStack.cpp  StatisticState.cpp  Utility.cpp  card.cpp
fool/sources/Engine/: Application.cpp  SceneNode.cpp  ShapeNode.cpp  SpriteNode.cpp  State.cpp  StateStack.cpp
fool/sources/GUI/: Button.cpp  Component.cpp  Container.cpp  InputText.cpp  Label.cpp  List.cpp  ListItem.cpp  Offset.cpp  OnlineGameItem.cpp
fool/sources/Game/: AI.cpp  Animation.cpp  CardDeck.cpp  CardField.cpp  CardGroup.cpp  CardPile.cpp  GameInfo.cpp  GameStatus.cpp  PlayerInfo.cpp  card.cpp
fool/sources/States/: ConnectionWaitState.cpp  CreatingRoomState.cpp  GameEndState.cpp  GameState.cpp  MenuState.cpp  MultiplayerConnectionState.cpp  MultiplayerGameState.cpp  PauseState.cpp  SettingsState.cpp  StatisticState.cpp
